update post in home