@@ -82,11 +82,6 @@ public class PostServiceImp implements PostService {
                 .collect(Collectors.toList());
     }
 
-//    @Override
-//    @CacheEvict(value = "posts", key = "#id")
-//    public void deletePostById(String id) {
-//        postRepository.deleteById(id);
-//    }
     @Override
     @CacheEvict(value = "posts", key = "#id")
     public void deletePostById(String id) {
@@ -144,7 +139,17 @@ public class PostServiceImp implements PostService {
         List<Post> posts = postRepository.findPostsWithInteractionCounts()
             .stream()
             .map(result -> (Post) result[0])
-            .collect(Collectors.toList());
+            .toList();
+        return posts.stream().map(mapper::toPostDTO).collect(Collectors.toList());
+    }
+
+    @Override
+    public List<PostDTO> getRecommendedPostsForExplore(String userId) {
+        // Logic recommendation: Lấy posts từ user follow, lượt like, hashtag, v.v.
+        List<Post> posts = postRepository.findPostsWithInteractionCountsAndNotFollow(userId)
+            .stream()
+            .map(result -> (Post) result[0])
+            .toList();
         return posts.stream().map(mapper::toPostDTO).collect(Collectors.toList());
     }
 }
